# codegraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/cg-cli/: Cargo.toml
crates/cg-cli/src/: incremental.rs  lib.rs  main.rs  registry.rs
crates/cg-cli/tests/: cli.rs  registry.rs
crates/cg-common/: Cargo.toml
crates/cg-common/src/: lib.rs
crates/cg-core/: Cargo.toml
crates/cg-core/src/: community.rs  incremental.rs  lib.rs  mro.rs  process.rs
crates/cg-graph/: Cargo.toml
crates/cg-graph/src/: lib.rs
crates/cg-mcp/: Cargo.toml
crates/cg-mcp/src/: lib.rs  setup.rs
crates/cg-mcp/src/resources/: mod.rs
crates/cg-mcp/src/server/: mod.rs
crates/cg-mcp/src/tools/: mod.rs
crates/cg-parser/: Cargo.toml
crates/cg-parser/src/: lib.rs
crates/cg-parser/src/extractors/: mod.rs
crates/cg-parser/src/languages/: mod.rs
crates/cg-parser/src/parser/: mod.rs  pool.rs
crates/cg-parser/src/pipeline/: communities.rs  cross_file.rs  mod.rs  mro.rs  parse.rs  processes.rs  resolve.rs  scan.rs  structure.rs
crates/cg-parser/src/providers/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/cg-parser/src/resolution/: cross_file.rs  mod.rs  resolve.rs
crates/cg-parser/src/scanner/: mod.rs
crates/cg-parser/src/structure/: mod.rs
crates/cg-search/: Cargo.toml
crates/cg-search/src/: hybrid.rs  lib.rs  tantivy_index.rs
crates/cg-server/: Cargo.toml
crates/cg-server/src/: lib.rs
crates/cg-server/tests/: server.rs
docs/: RELEASE_GAP_ANALYSIS.md  开发计划.md  进度跟踪.md
fixtures/: python_class_inheritance.py  rust_basic_struct.rs  typescript_import_chain.ts
