[package]
name = "cg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "CodeGraph CLI entry point"

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
cg-common = { workspace = true }
cg-core = { workspace = true }
cg-parser = { workspace = true }
cg-graph = { workspace = true }
cg-search = { workspace = true }
cg-mcp = { workspace = true }
cg-server = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
dirs = "6.0"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
