[package]
name = "cg-common"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "CodeGraph shared types, constants, and utility functions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
