[package]
name = "cg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "In-memory knowledge graph model and pipeline context"

[dependencies]
cg-common = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
petgraph = { workspace = true }
sha2 = "0.10"
git2 = { workspace = true }
openssl = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.14"
