[package]
name = "cg-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "In-memory graph storage adapter and schema management"

[dependencies]
cg-common = { workspace = true }
cg-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
