[package]
name = "cg-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "MCP server implementation and tool definitions"

[dependencies]
cg-common = { workspace = true }
cg-core = { workspace = true }
cg-graph = { workspace = true }
cg-search = { workspace = true }

rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "6.0"

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.14"
