[package]
name = "cg-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "File scanning, tree-sitter parsing, and symbol extraction"

[dependencies]
cg-common = { workspace = true }
cg-core = { workspace = true }

tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3.14"
