[package]
name = "cg-server"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "HTTP API server for CodeGraph"

[dependencies]
cg-common = { workspace = true }
cg-core = { workspace = true }
cg-graph = { workspace = true }
cg-search = { workspace = true }
cg-mcp = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tower = { workspace = true }
